[package]
name = "fak"
version = "1.0.0"
edition = "2021"
description = "Formal Assurance Kernel - proof substrate for autonomous governance verification"
license = "MIT"
keywords = ["formal-verification", "governance", "proof", "autonomous-systems"]
categories = ["development-tools::testing"]
repository = "https://github.com/pngen/fak"
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
regex = "1.5"

[dev-dependencies]
proptest = "1.4"